--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
+    "babel-loader": "^9.1.0",
     "eslint": "^8.28.0",
     "eslint-plugin-react": "^7.31.11",
-    "typescript": "^4.9.3"
+    "html-webpack-plugin": "^5.5.0",
+    "typescript": "^4.9.3",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.0",
+    "webpack-dev-server": "^4.11.1"
   }
 }
