--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "bud-frontend-developer-exercise",
   "version": "1.0.0",
   "description": "Frontend developer excerise for frontend candidates at Bud.",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "main": "index.js",
   "scripts": {
     "start": "webpack serve",
     "build": "webpack .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "frontend@thisisbud.com",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.20.2",
