--- a/package.json
+++ b/package.json
@@ -1,49 +1,39 @@
 {
   "name": "bud-frontend-developer-exercise",
   "version": "1.0.0",
-  "description": "Frontend developer excerise for frontend candidates at Bud.",
+  "description": "Frontend developer exercise for frontend candidates at Bud.",
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
   },
-  "main": "index.js",
   "scripts": {
-    "start": "webpack serve",
-    "build": "webpack .",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
     "test": "jest"
   },
   "author": "frontend@thisisbud.com",
   "license": "ISC",
+  "dependencies": {
+    "@radix-ui/react-tabs": "^1.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "devDependencies": {
-    "@babel/core": "^7.20.2",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@types/jest": "^29.2.3",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.9",
-    "@types/react-test-renderer": "^18.0.0",
-    "@types/styled-components": "^5.1.26",
-    "@typescript-eslint/eslint-plugin": "^5.44.0",
-    "@typescript-eslint/parser": "^5.44.0",
-    "babel-loader": "^9.1.0",
-    "eslint": "^8.28.0",
-    "eslint-plugin-react": "^7.31.11",
-    "html-webpack-plugin": "^5.5.0",
-    "jest": "^29.3.1",
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
+    "@vitejs/plugin-react": "^2.2.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest-environment-jsdom": "^29.3.1",
-    "jest-styled-components": "^7.1.1",
-    "react-test-renderer": "^18.2.0",
-    "typescript": "^4.9.3",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.0",
-    "webpack-dev-server": "^4.11.1"
+    "msw": "^0.49.1",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.6.4",
+    "vite": "^3.2.3",
+    "whatwg-fetch": "^3.6.2"
   },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "styled-components": "^5.3.6"
+  "msw": {
+    "workerDirectory": "public"
   }
 }
