chore: added coverage and watch shorthand scripts

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "author": "frontend@thisisbud.com",
   "license": "ISC",
