chore: added bankly as project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bud-frontend-developer-exercise",
+  "name": "bankly",
   "version": "1.0.0",
   "description": "Frontend developer exercise for frontend candidates at Bud.",
   "engines": {
