--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "dependencies": {
     "@radix-ui/react-tabs": "^1.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "msw": "^0.49.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -28,7 +29,6 @@
     "@vitejs/plugin-react": "^2.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest-environment-jsdom": "^29.3.1",
-    "msw": "^0.49.1",
     "ts-jest": "^29.0.3",
     "typescript": "^4.6.4",
     "vite": "^3.2.3",
