--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bankly",
+  "name": "thisisbud--bankly",
   "version": "1.0.0",
   "description": "Frontend developer exercise for frontend candidates at Bud.",
   "engines": {
@@ -17,24 +17,24 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@radix-ui/react-tabs": "^1.0.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "msw": "^1.0.0"
+    "@radix-ui/react-tabs": "1.0.2",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
+    "msw": "2.10.5"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@types/testing-library__jest-dom": "^5.14.5",
-    "@vitejs/plugin-react": "^3.0.1",
-    "identity-obj-proxy": "^3.0.0",
-    "jest-environment-jsdom": "^29.4.0",
-    "ts-jest": "^29.0.5",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.4",
-    "whatwg-fetch": "^3.6.2",
+    "@testing-library/jest-dom": "6.7.0",
+    "@testing-library/react": "16.3.0",
+    "@types/react": "19.1.10",
+    "@types/react-dom": "19.1.7",
+    "@types/testing-library__jest-dom": "6.0.0",
+    "@vitejs/plugin-react": "5.0.0",
+    "identity-obj-proxy": "3.0.0",
+    "jest-environment-jsdom": "30.0.5",
+    "ts-jest": "29.0.5",
+    "typescript": "5.9.2",
+    "vite": "7.1.2",
+    "whatwg-fetch": "3.6.2",
     "syncpack": "13.0.4"
   },
   "msw": {
