--- a/package.json
+++ b/package.json
@@ -3,41 +3,43 @@
   "version": "1.0.0",
   "description": "Frontend developer exercise for frontend candidates at Bud.",
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
+    "node": ">=24.0.0",
+    "npm": ">=10.0.0"
   },
   "scripts": {
     "syncpack": "syncpack",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:coverage": "vitest --coverage"
   },
   "license": "ISC",
   "dependencies": {
-    "@radix-ui/react-tabs": "1.0.2",
+    "@radix-ui/react-tabs": "1.1.13",
+    "msw": "2.10.5",
     "react": "19.1.1",
-    "react-dom": "19.1.1",
-    "msw": "2.10.5"
+    "react-dom": "19.1.1"
   },
   "devDependencies": {
+    "@testing-library/dom": "10.4.1",
     "@testing-library/jest-dom": "6.7.0",
     "@testing-library/react": "16.3.0",
+    "@types/node": "24.3.0",
     "@types/react": "19.1.10",
     "@types/react-dom": "19.1.7",
-    "@types/testing-library__jest-dom": "6.0.0",
     "@vitejs/plugin-react": "5.0.0",
+    "happy-dom": "18.0.1",
     "identity-obj-proxy": "3.0.0",
-    "jest-environment-jsdom": "30.0.5",
-    "ts-jest": "29.0.5",
+    "syncpack": "13.0.4",
     "typescript": "5.9.2",
     "vite": "7.1.2",
-    "whatwg-fetch": "3.6.2",
-    "syncpack": "13.0.4"
+    "vitest": "3.2.4"
   },
   "msw": {
-    "workerDirectory": "public"
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
